force-app/main/default/objects/ContractDocument__c/ContractDocument__c.object-meta.xml
<CustomObject>
    <description>Custom object to associate with Contract Management object. Every Contract Management record will have multiple Documents related to it.</description>
    <label>Contract Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>