force-app/main/default/objects/ContractDocument__c/fields/Contract_Management__c.field-meta.xml
<CustomField>
    <fullName>Contract_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Each Contract Document will be associated with a Contract Management record.</description>
    <label>Contract Management</label>
    <referenceTo>Contract_Management__c</referenceTo>
    <relationshipLabel>Contract Documents</relationshipLabel>
    <relationshipName>Contract_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>