force-app/main/default/objects/ContractDocument__c/fields/Document_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Expiry_Date__c</fullName>
    <description>To store expiry date of document or agreement.</description>
    <label>Document Expiry Date</label>
    <type>Date</type>
</CustomField>