force-app/main/default/objects/ContractDocument__c/fields/Is_1_month_before_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_1_month_before_Expiry_Date__c</fullName>
    <formula>IF(
TODAY() = ADDMONTHS(Document_Expiry_Date__c,-1),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is 1 month before Expiry Date</label>
    <type>Checkbox</type>
</CustomField>